--- a/template/dl.html
+++ b/template/dl.html
@@ -106,9 +106,9 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/tamilmovies4Krio">
+                    <a class="navbar-brand  text-light fw-bold " href="https://t.me/MoviesUpdate_07">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Movies group
+                            Movies Updates
                           </span>
                     </a>
                   </div>
