--- a/template/dl.html
+++ b/template/dl.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" type="image/x-icon">
-    <meta property="og:image" content="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" itemprop="thumbnailUrl">
+    <link rel="shortcut icon" href="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" type="image/x-icon">
+    <meta property="og:image" content="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s | Teamrioupdates</title>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://ibb.co/D5zqNj3/Logo-Teamrioupdates.png" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
