--- a/template/dl.html
+++ b/template/dl.html
@@ -39,9 +39,9 @@
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" width="50" height="50" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
-                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
+                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >Harshit Bhai</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
                         </div>
                     </div>
