--- a/template/req.html
+++ b/template/req.html
@@ -7,7 +7,7 @@ Thanks @Lazydeveloperr helping this journey
     <meta property="og:image" content="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{file_name}} | Mvoies Updates</title>
+    <title>{{file_name}} | Movies Updates</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>    
@@ -38,9 +38,9 @@ Thanks @Lazydeveloperr helping this journey
                     </div>
                     <div class="d-flex ">
                         <!-- logo -->
-                        <img src="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
+                        <img src="https://i.ibb.co/9ntSRzR/IMG-20230829-153128-529.jpg" width="50" height="50" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
-                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LazyDeveloperr</h4>
+                            <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >Harshit Bhai</h4>
                             <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">The one & Only</p>
                         </div>
                     </div>
