--- a/template/req.html
+++ b/template/req.html
@@ -233,7 +233,7 @@
                 <div class=" justify-center items-center text-center w-full text-center flex ">
                     <div  class="text-gray-400 text-center sm:-m-1 -ms-4 m-2 p-2">
                         <h5>
-                            <a class="font-bold" href="https://telegram.me/MoviesUpdate_07" target="_blank">Movies Updates : </a>Run and managed by <a href="https://teleram.me/Bhaiharshit092" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">HarshitBhai</a> & <a href="https://telegram.me/Anonymousdeveloper098" target="_blank">Anonymous (<a href="https://telegram.me/MoviesUpdate_07" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Movies Updates</a>)
+                            <a class="font-bold" href="https://telegram.me/MoviesUpdate_07" target="_blank">Movies Updates : </a>Run and managed by <a href="https://telegram.me/Bhaiharshit092" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">HarshitBhai</a> & <a href="https://telegram.me/Anonymousdeveloper098" target="_blank">Anonymous (<a href="https://telegram.me/MoviesUpdate_07" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Movies Updates</a>)
                             </a> 
                         </h5>
                     </div>
